--- a/create_css.css
+++ b/create_css.css
@@ -1,50 +1,11 @@
-@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
-
 * {
-  font-family: "Nanum Gothic", sans-serif;
   box-sizing: border-box;
+  font-family: Noto Sans;
 }
 
 body {
   justify-content: center;
-  background-color: rgba(190, 186, 186, 0.877);
-  /* background-color: #23AC0E; */
-}
-
-.create_header_plan {
-  font-size: 32px;
-  font-weight: 700;
-  margin-top: 8px;
-}
-
-.create_title {
-  width: 100%;
-  padding-bottom: 10px;
-  padding-top: 10px;
-  border-radius: 8px;
-  font-size: 15px;
-  margin-top: 30px;
-  margin-bottom: 10px;
-  border: none;
-  background: rgba(190, 186, 186, 0.877);
-}
-
-input[type="text"],
-[type="date"] {
-  padding-left: 8px;
-}
-
-#create_date {
-  width: 100%;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  border-radius: 8px;
-  border: none;
-  background: rgba(190, 186, 186, 0.877);
-}
-
-input[type="date"]::-webkit-calendar-picker-indicator {
-  display: none;
+  background-color: white;
 }
 
 .create_container {
@@ -58,28 +19,94 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   padding-bottom: 30px;
   padding: 30px;
   display: block;
-  background-color: white;
+  background-color: #f7f6ee;
   max-width: 400px;
   min-width: 320px;
 }
 
+.create_header_plan {
+  font-size: 32px;
+  font-weight: 700;
+  margin-top: 8px;
+}
+
+.create_title {
+  width: 100%;
+  padding: 4px;
+  border-radius: 8px;
+  font-size: 15px;
+  margin-top: 30px;
+  border: 1px solid #edebd9;
+  background: #ffffff;
+  color: #1f2d10;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.create_date_title {
+  font-size: 12px;
+  color: #596123;
+  padding-bottom: 8px;
+  padding-top: 16px;
+  font-weight: 400;
+}
+
+input[type="text"],
+[type="date"] {
+  padding-left: 8px;
+}
+
+.create_dates {
+  display: flex;
+  justify-content: space-between;
+}
+
+#create_date_from {
+  border: 1px solid #edebd9;
+  width: 100%;
+  margin-right: 10px;
+  padding: 4px;
+  color: #1f2d10;
+}
+
+#create_date_to {
+  border: 1px solid #edebd9;
+  width: 100%;
+  margin-left: 10px;
+  padding: 4px;
+  color: #1f2d10;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  background-image: url("./date.svg");
+}
+
+.create_course_title {
+  color: #596123;
+  font-size: 12px;
+  font-weight: 400;
+  padding-bottom: 8px;
+  padding-top: 24px;
+}
+
 .create_course {
   width: 100%;
-  height: 200px;
-  background: rgba(190, 186, 186, 0.877);
+  background: #e5e3c9;
   margin-right: auto;
   margin-left: auto;
   text-align: center;
   border-radius: 8px;
-  margin-bottom: 10px;
-  margin-top: 10px;
+  margin-bottom: 24px;
+  padding: 16px;
 }
 
 .create_section {
   margin-right: 0;
   margin-left: 0;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding: 16px;
+  background: #b4cfb0;
+  width: 100%;
+  border-radius: 4px;
 }
 
 .create_name {
@@ -88,14 +115,16 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .create_name_title {
   display: inline-block;
-  padding-bottom: 30px;
-  padding-right: 10px;
+  padding-bottom: 16px;
+  padding-right: 30px;
   vertical-align: -3px;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 .create_name_input {
   display: inline-block;
-  width: 100px;
+  width: 100%;
 }
 
 .create_url {
@@ -104,48 +133,59 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .create_url_title {
   display: inline-block;
-  padding-right: 10px;
+  padding-right: 30px;
   vertical-align: -3px;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 .create_name_input,
 .create_url_input {
-  width: 250px;
-  height: 30px;
-  border-radius: 8px;
+  width: 200px;
+  height: 28px;
+  border-radius: 4px;
   border: none;
 }
 
-.create_write {
+.create_write_title {
+  color: #596123;
+  font-size: 12px;
+  font-weight: 400;
+}
+
+#create_write {
   width: 100%;
   border-radius: 8px;
-  padding: 15px;
+  padding: 10px;
   margin-bottom: 10px;
+  margin-top: 8px;
   border: none;
-  background: rgba(190, 186, 186, 0.877);
-  font-size: 15px;
+  background: #ffffff;
+  font-size: 14px;
+  font-weight: 400;
+  border: 1px solid #edebd9;
+  resize: none;
 }
 
 .create_course_add_btn {
-  width: 35px;
+  width: 100%;
   height: 35px;
-  border-radius: 50%;
+  border-radius: 4px;
+  margin-top: 16px;
   border: none;
-  background: white;
+  background: #b4cfb0;
   cursor: pointer;
   justify-content: end;
   align-items: center;
 }
 
 .create_btn {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+  width: 100%;
+  height: 39px;
+  border-radius: 4px;
   border: none;
-  background: rgba(190, 186, 186, 0.877);
+  color: white;
+  margin-top: 32px;
+  background: #94b49f;
   cursor: pointer;
-  justify-content: end;
-  align-items: center;
-  margin-left: auto;
-  display: block;
 }
